--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - images/bb.jpg
+    - images/hola.jpg
   # fonts:
   #   - family: Schyler
   #     fonts:
